# Llama.cppManager

./: .gitignore  ANALYSIS.md  Cargo.toml  README.txt  dxdiag_output.xml
.cargo/: config.toml
crates/llama-cli/: Cargo.toml
crates/llama-cli/src/: main.rs
crates/llama-core/: Cargo.toml
crates/llama-core/src/: environment.rs  error.rs  huggingface.rs  lib.rs  model.rs  network.rs  params.rs  quantize.rs
crates/llama-core/tests/: environment_test.rs  error_test.rs  huggingface_test.rs  model_test.rs  network_test.rs  params_test.rs  quantize_test.rs
crates/llama-gui/: Cargo.toml
crates/llama-gui/src/: app.rs  main.rs  theme.rs
crates/llama-gui/src/views/: chat_view.rs  env_view.rs  hf_view.rs  llamacpp_view.rs  mod.rs  model_view.rs  models.rs  offload_view.rs  quantize_view.rs  server.rs  settings_view.rs
crates/llama-gui/src/widgets/: layer_table.rs  mod.rs  param_slider.rs  progress.rs  toast.rs
crates/llama-gui/tests/: offload_test.rs  widgets_test.rs
crates/llama-server/: Cargo.toml
crates/llama-server/src/: error.rs  lib.rs  offload.rs  process.rs
crates/llama-server/tests/: offload_test.rs  process_test.rs
docs/compose/plans/: 2026-06-13-llama-manager-plan.md
docs/compose/specs/: 2026-06-13-llama-manager-design.md
