[workspace]
resolver = "2"
members = [
    "crates/llama-core",
    "crates/llama-server",
    "crates/llama-gui",
    "crates/llama-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
directories = "5"
sysinfo = "0.30"
rfd = "0.15"
