[package]
name = "llama-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "egui-based GUI for llama-manager"

[[bin]]
name = "llama-manager"
path = "src/main.rs"

[dependencies]
eframe = "0.30"
egui = "0.30"
rfd = "0.15"
tracing.workspace = true
tracing-subscriber.workspace = true
llama-core = { path = "../llama-core" }
llama-server = { path = "../llama-server" }
