[package]
name = "llama-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Llama server process management"

[dependencies]
llama-core = { path = "../llama-core" }
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
